--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ TYPEORM_USERNAME = admin
 TYPEORM_PASSWORD = admin
 TYPEORM_DATABASE = code_drops_cruud
 TYPEORM_PORT = 3333
+TYPEORM_MIGRATIONS = src/database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR = src/database/migrations
