--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --transpile-only src/server.ts"
+    "start": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm":"ts-node-dev node_modules/.bin/typeorm"
   },
   "keywords": [],
   "author": "",
